--- a/easy-notes/src/main/resources/application.properties
+++ b/easy-notes/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/notes_app?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = Sh3rlocked@15122017
+spring.datasource.password = root
 
 
 ## Hibernate Properties
